# phpdisque

./: .gitignore  CMakeLists.txt  CREDITS  README.md  common.h  config.m4  config.w32  disque.c  php_disque.c  php_disque.h  php_disque.php
tests/: 001.phpt
